Añade nuevo contenido a la página

--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Primera Página</title>
+    <title>Mi Proyecto</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>¡Hola desde Linux! 🐧</h1>
-    <p>Esta es mi primera página web alojada en GitHub.</p>
-    <script src="script.js"></script>
+    <h1>¡Bienvenida a mi sitio!</h1>
+    <p>Editando desde VS Code 🎨</p>
 </body>
 </html>
